Changes: Load pixmaps synchronously. Fix qtkineticdemo.
RevBy: TrustMe

--- a/demos/qtstylekinetic/MainWindow.ui
+++ b/demos/qtstylekinetic/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Qt Style Dialog Test</string>
+   <string>Qt Style Kinetic Test</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -20,7 +20,7 @@
       <item>
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>2</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab">
          <attribute name="title">
