--- a/tests/ft_duistylesheet/ft_duistylesheet_testobject.css
+++ b/tests/ft_duistylesheet/ft_duistylesheet_testobject.css
@@ -25,10 +25,10 @@ TestObjectStyle
     attribute-pen-style: nopen;
     attribute-axis: x;
     
-    attribute-pixmap: "duibutton_background" 30 30;
-    attribute-pixmap2: duibutton_background 30 30;
-    attribute-pixmap3: "duibutton_background";
-    attribute-pixmap4: duibutton_background;
+    attribute-pixmap: "duibutton-background" 30 30;
+    attribute-pixmap2: duibutton-background 30 30;
+    attribute-pixmap3: "duibutton-background";
+    attribute-pixmap4: duibutton-background;
     attribute-scalable: "C1-container-background" 20 20 20 20;
     attribute-scalable2: C1-container-background 20 20 20 20;
     attribute-scalable3: "C1-container-background";
