--- a/demos/widgetsgallery/theme/base/style/widgetsgallery.css
+++ b/demos/widgetsgallery/theme/base/style/widgetsgallery.css
@@ -131,3 +131,41 @@ DuiButtonStyle#theme-selection-button {
   rail-dot-not-loaded-image: "Dot-empty";
   rail-dot-played-image: "Slider-dot-selected";
 }
+
+DuiSliderStyle#video-player-slider {
+    padding-left:   0;
+    padding-top:    0;
+    padding-right:  0;
+    padding-bottom: 0;
+
+    margin-left:    0;
+    margin-top:     0;
+    margin-right:   0;
+    margin-bottom:  0;
+}
+
+DuiButtonStyle#video-player-button {
+
+    padding-left:   0;
+    padding-top:    0;
+    padding-right:  0;
+    padding-bottom: 0;
+
+    margin-left: 0;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+
+    text-margin-left: 0;
+    text-margin-top: 0;
+    text-margin-right: 0;
+    text-margin-bottom: 0;
+
+    preferred-size: 7.5mm 5mm;
+    minimum-size: 7.5mm 5mm;
+    maximum-size: 7.5mm 5mm;
+
+
+    icon-size: 3.5mm 3.5mm;
+    icon-align: center;
+}
