--- a/tests/ft_duistylesheet/ft_duistylesheet_testobject.css
+++ b/tests/ft_duistylesheet/ft_duistylesheet_testobject.css
@@ -56,6 +56,8 @@ TestObjectStyle#Specialized
     attribute-integer: 100;
     attribute-real: 100.0;
     attribute-string: "specialized string";
+    attribute-pixmap: none;
+    attribute-point: none;
 }
 
 TestObject2Style#Specialized
