Changes: Removed none-css definition from sizes,numbers,etc.
RevBy: TrustMe

--- a/tests/ft_duistylesheet/ft_duistylesheet_testobject.css
+++ b/tests/ft_duistylesheet/ft_duistylesheet_testobject.css
@@ -57,7 +57,7 @@ TestObjectStyle#Specialized
     attribute-real: 100.0;
     attribute-string: "specialized string";
     attribute-pixmap: none;
-    attribute-point: none;
+    attribute-color: none;
 }
 
 TestObject2Style#Specialized
