Changes: Improved list page in widgets gallery.
RevBy: TrustMe
Details: Increased number of displayed columns in list page to 4, added selection if the separators need to be off or on.

--- a/demos/widgetsgallery/theme/base/style/widgetsgallery.css
+++ b/demos/widgetsgallery/theme/base/style/widgetsgallery.css
@@ -82,6 +82,17 @@ DuiButtonStyle#theme-selection-button {
     group-header-object-name: "wgListGroupHeaders";
 }
 
+#wgListWithSeparators {
+    margin-left: 0;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+
+    group-header-object-name: "wgListGroupHeaders";
+    horizontal-separator-object-name: "";
+    vertical-separator-object-name: "";
+}
+
 #labelListItemFile {
     color: #FFFFFF;
     font: "Nokia Sans Wide" 21px;
