Fixes: NB#153618 - duistyle doesn't dashify mode names
RevBy: TrustMe

--- a/tests/ft_duistylesheet/ft_duistylesheet_testobject.css
+++ b/tests/ft_duistylesheet/ft_duistylesheet_testobject.css
@@ -51,6 +51,11 @@ TestObject3Style
     // Last attribute doesn't need ';' and the bracket can be in the same row
     attribute-string2: "string3" }
 
+TestObject3Style:some-mode
+{
+    attribute-integer: 163;
+}
+
 TestObjectStyle#Specialized
 {
     attribute-integer: 100;
