Changes: Improvements to widgets gallery menu system and page layout.
RevBy: Michal Guminiak, Tomas Junnonen

Details:
1) Implementation of the drill-down menu in widgets gallery.
2) New category page for selection of gallery page by category.
3) Added the language settings page to application menu.
4) Some code clean up, and added the language settins page to the application view.
5) Added a content items demonstrantion page.
6) Added separate pages for dialogs and notifications.
7) Includes improved patch from merge request #456 (commits by csklu).
8) Removed dialogs and notifications page due to not being used anymore.
9) Removed image rating possibility from widgets gallery grid page.
10) Implemented pinching zoom of images in widgetsgallery grid page.

--- a/demos/widgetsgallery/theme/base/style/widgetsgallery.css
+++ b/demos/widgetsgallery/theme/base/style/widgetsgallery.css
@@ -1,6 +1,30 @@
 @import "../../libmeegotouchcore/style/fonts.css";
 @import "../../libmeegotouchcore/style/colors.css";
 
+MList#wgMainPageCategoryList {
+    margin-left:    0;
+    padding-left:   0;
+    margin-right:   0;
+    padding-right:  0;
+
+    border-left:    0;
+    border-right:   0;
+    border-top:     0;
+    border-bottom:  0;
+}
+
+MConentItem#wgMainPageCategoryListItem {
+    margin-left:    0;
+    padding-left:   0;
+    margin-right:   0;
+    padding-right:  0;
+
+    border-left:    0;
+    border-right:   0;
+    border-top:     0;
+    border-bottom:  0;
+}
+
 DuiButtonStyle#theme-selection-button {
     minimum-size: 10mm 10mm;
     preferred-size: 15mm 15mm;
