Fixes: NB#170120 - MStyleSheetParser doesn't parse comments properly
RevBy: Tomas

--- a/tests/ft_mstylesheetparser/ft_mstylesheetparser_test.css
+++ b/tests/ft_mstylesheetparser/ft_mstylesheetparser_test.css
@@ -22,6 +22,11 @@ TestObject
     attribute-color: #fff/*hmm...*/fff;
 }
 
+/* some valid comments */
+/***/
+/**/ /* * */
+/* abc **/
+
 
 // General purpose style definitions for Test object with parent
 ParentName TestObject
