--- a/demos/widgetsgallery/theme/base/style/widgetsgallery.css
+++ b/demos/widgetsgallery/theme/base/style/widgetsgallery.css
@@ -281,3 +281,8 @@ MLabelStyle#video-title-label {
 
     border-width: 0px;
 }
+
+MAbstractLayoutPolicyStyle#buttongroup {
+    vertical-spacing: 0;
+    horizontal-spacing: 0;
+}
