Fixes: NB#180331 -  CSS constants do not work for pixmap types
RevBy: Tomas Junnonen

--- a/tests/ft_mstylesheetparser/ft_mstylesheetparser_constants.css
+++ b/tests/ft_mstylesheetparser/ft_mstylesheetparser_constants.css
@@ -19,7 +19,7 @@ TestObject
 {
     attr-int: $cInt;
     attr-string1: "name";
-    attr-string2: "this is a string with constant $cName";
+    attr-string2: "this is a string with constant $cName" $cInt $cReal;
     attr-bool: $cBool;
     attr-pos1: $cWidth $cHeight; /* comment after the attribute */
     attr-pos2: $cPoint;
