--- a/demos/widgetsgallery/theme/base/style/widgetsgallery.css
+++ b/demos/widgetsgallery/theme/base/style/widgetsgallery.css
@@ -1,30 +1,3 @@
-MList#wgMainPageCategoryList {
-    margin-left:    0;
-    padding-left:   0;
-    margin-right:   0;
-    padding-right:  0;
-
-    border-left:    0;
-    border-right:   0;
-    border-top:     0;
-    border-bottom:  0;
-}
-
-MConentItem#wgMainPageCategoryListItem {
-    margin-left:    0;
-    padding-left:   0;
-    margin-right:   0;
-    padding-right:  0;
-
-    border-left:    0;
-    border-right:   0;
-    border-top:     0;
-    border-bottom:  0;
-}
-
-#listItem {
-}
-
 #feedbackButton2 {
     press-feedback: press-different;
     release-feedback: release-different;
@@ -63,76 +36,9 @@ MConentItem#wgMainPageCategoryListItem {
     minimum-feedback-interval: 45;
 }
 
-#wgToggleButton {
-}
-
-#wgToggleButton:selected {
-}
-
-#wgIconLeft {
-    icon-align: left;
-}
-
-#wgIconRight {
-    icon-align: right;
-}
-
-#wgIconTop {
-    icon-align: top;
-}
-
-#wgIconBottom {
-    icon-align: bottom;
-}
-
-#header {
-    font: $FONT_SMALL;
-    color: $COLOR_INVERTED_FOREGROUND;
-    background-image: "Divider-with-label";
-    minimum-size: 32 32;
-}
-
-#richLabelStyle {
-    color: #FFA000;
-}
-
-#wgList {
-    margin-left: 0;
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-
-    group-header-object-name: "wgListGroupHeaders";
-}
-
-#wgListWithSeparators {
-    margin-left: 0;
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-
-    group-header-object-name: "wgListGroupHeaders";
+#listWithSeparators {
     horizontal-separator-object-name: "";
     vertical-separator-object-name: "";
-}
-
-#labelListItemFile {
-    color: #FFFFFF;
-    font: "Nokia Sans Wide" 21px;
-}
-
-#labelListItemComments {
-    color: #F7941E;
-    font: "Nokia Sans Wide" 15px;
-}
-
-#wgListGroupHeaders {
-    margin-bottom: 0px;
-    margin-top: 10px;
-}
-
-#wgViewmenuLabel {
-    font: "Nokia Sans" 16;
 }
 
 MSliderStyle#video-player-slider {
@@ -179,17 +85,6 @@ MButtonStyle#video-player-button {
     icon-align: center;
 }
 
-MApplicationPageStyle#video-detail-page {
-}
-
-ItemDetailPage MVideoWidgetStyle {
-    color-key: #001000;
-}
-
-ItemDetailPage MVideoWidgetStyle:fullscreen {
-    color-key: #001000;
-}
-
 MWidgetStyle#center-overlay-container {
     background-image: multimedia-overlay-center-background 17px 17px 17px 17px;
 }
@@ -215,29 +110,4 @@ MLabelStyle#video-title-label {
 #gridPage {
     background-image: ;
     background-color: black;
-}
-
-#gridItem {
-    margin-left: 0px;
-    padding-left: 0px;
-    margin-right: 0px;
-    padding-right: 0px;
-
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 0px;
-    border-bottom: 0px;
-}
-
-#badge {
-    minimum-size: 30px 30px;
-    preferred-size: 30px 30px;
-    maximum-size: 30px 30px;
-
-    border-width: 0px;
-}
-
-MAbstractLayoutPolicyStyle#buttongroup {
-    vertical-spacing: 0;
-    horizontal-spacing: 0;
 }
