Changes: Use black icons in icon button page in widgetsgallery.
RevBy: Jakub
Details: Improves readability on light-coloured page backgrounds.

--- a/demos/widgetsgallery/theme/base/style/widgetsgallery.css
+++ b/demos/widgetsgallery/theme/base/style/widgetsgallery.css
@@ -111,3 +111,7 @@ MLabelStyle#video-title-label {
     background-image: ;
     background-color: black;
 }
+
+#iconButton {
+    text-color: black;
+}
