Changes: Manual test case for NB#185890
RevBy: TrustMe

--- a/demos/qtstyleexample/mainwindow.ui
+++ b/demos/qtstyleexample/mainwindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="Pizza">
        <attribute name="title">
@@ -201,6 +201,9 @@
               <iconset resource="res.qrc">
                <normaloff>:/images/images/icon-m-message-send-receive.svg</normaloff>:/images/images/icon-m-message-send-receive.svg</iconset>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
              <property name="toolButtonStyle">
               <enum>Qt::ToolButtonTextBesideIcon</enum>
              </property>
@@ -220,6 +223,9 @@
              <property name="icon">
               <iconset resource="res.qrc">
                <normaloff>:/images/images/icon-m-message-send-receive.svg</normaloff>:/images/images/icon-m-message-send-receive.svg</iconset>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
              <property name="toolButtonStyle">
               <enum>Qt::ToolButtonTextUnderIcon</enum>
@@ -247,6 +253,9 @@
              </property>
              <property name="text">
               <string>ToolButton text only</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
              <property name="toolButtonStyle">
               <enum>Qt::ToolButtonTextOnly</enum>
@@ -458,8 +467,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>122</width>
-                <height>225</height>
+                <width>466</width>
+                <height>166</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -1192,7 +1201,7 @@
      <x>0</x>
      <y>0</y>
      <width>584</width>
-     <height>27</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -1411,6 +1420,38 @@
     <hint type="destinationlabel">
      <x>89</x>
      <y>162</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>toolButton</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>toolButton_4</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>508</x>
+     <y>92</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>514</x>
+     <y>119</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>toolButton</sender>
+   <signal>clicked()</signal>
+   <receiver>toolButton_3</receiver>
+   <slot>toggle()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>443</x>
+     <y>96</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>459</x>
+     <y>198</y>
     </hint>
    </hints>
   </connection>
