New: Support parent style name selectors for styling.
RevBy: Armin Berres, Janne Heikkilä

Details: Adds support for parent style name selectors.
E.g.: MListItem#BlackItem MLabelStyle#CommonSingleTitle.

-Updated the functional style sheet test to support the new selectors.
-Updated the functional tests for style sheet parser for parent style name selectors.

--- a/tests/ft_mstylesheet/ft_mstylesheet_testobject.css
+++ b/tests/ft_mstylesheet/ft_mstylesheet_testobject.css
@@ -172,3 +172,13 @@ TestWidget2 TestObjectStyle
     attribute-color: #000020;
 }
 
+TestWidget#Specialized TestObjectStyle 
+{
+    attribute-color: #000100;
+}
+
+TestWidget3#Specialized TestObjectStyle#Specialized
+{
+    attribute-color: #000110;
+}
+
