Changes: MApplicationWindow hides empty navigationbar.
RevBy: Daniel, Dominik
Details: MNavigationBarView adds dynamic property MNavigationBar::isEmpty,
which is set to true if navigationbar has no escape button,
no menu button and no title.
MToolBarView adds dynamic property MToolBar::emptyInOrientation. It
indicates if toolbar is empty in landscape/portrait orientation.

MApplicationPage is updated to hide navigation bar if it is empty.
That is: no escape button, no menu button, no title and toolbar
is empty or it is floatable.

--- a/tests/ut_mapplicationwindow/ut_mapplicationwindow.css
+++ b/tests/ut_mapplicationwindow/ut_mapplicationwindow.css
@@ -12,3 +12,23 @@ MApplicationWindowStyle.Portrait {
     floatable-tool-bar: false;
     floatable-tab-bar: true;
 }
+
+MNavigationBarStyle {
+    has-title: false;
+    has-close-button: false;
+}
+
+MNavigationBarStyle#closebtn {
+    has-title: false;
+    has-close-button: true;
+}
+
+MNavigationBarStyle#title {
+    has-title: true;
+    has-close-button: false;
+}
+
+MNavigationBarStyle#title_closebtn {
+    has-title: true;
+    has-close-button: true;
+}
