Fixes: NB#201292 - MAction in toolbar is not a button
RevBy: Daniel d'Andrada

Details: MToolbarStyle::labelOnlyAsCommonButton property controls whether the
tool bar actions with just text applied should look like other tool bar
buttons with icons or should they be like normal common buttons.

--- a/tests/ut_mtoolbarview/ut_mtoolbarview.css
+++ b/tests/ut_mtoolbarview/ut_mtoolbarview.css
@@ -2,6 +2,7 @@ MToolbarStyle {
     capacity: 4;
     has-icons: true;
     has-labels: false;
+    label-only-as-common-button: true;
 }
 
 MToolbarStyle.Landscape {
@@ -20,6 +21,7 @@ MToolbarTabStyle {
     capacity: 4;
     has-icons: true;
     has-labels: true;
+    label-only-as-common-button: false;
 }
 
 MToolbarTabStyle.Landscape {
