--- a/tests/ut_mlayout/ut_mlayout.css
+++ b/tests/ut_mlayout/ut_mlayout.css
@@ -67,3 +67,13 @@ MBasicLayoutAnimationStyle {
     opacity-easing-curve: linear;
     duration: 40;
 }
+
+MBasicLayoutAnimationStyle#withoutOpacity {
+    animate-opacity: false;
+    duration: 40;
+}
+MBasicLayoutAnimationStyle#withInvalidOpacity {
+    initial-showing-opacity: -1;
+    final-hiding-opacity: -1;
+    duration: 40;
+}
