Fixes: NB#217991 - [TASK] Framework does not support full width tab buttons on toolbar
Tool bar updated according to the latest UI design
Details: until new graphics are released some specific use case (toolbar with buttons without text)
can appear not aligned.
RevBy: Adrian Yanes

--- a/tests/ut_mtoolbarview/ut_mtoolbarview.css
+++ b/tests/ut_mtoolbarview/ut_mtoolbarview.css
@@ -3,6 +3,11 @@ MToolbarStyle {
     has-icons: true;
     has-labels: false;
     label-only-as-common-button: true;
+
+    label-only-common-button-style-name: "ToolBarLabelOnlyCommonButton";
+    label-only-button-style-name: "ToolBarLabelOnlyButton";
+    icon-button-style-name: "ToolBarIconButton";
+    icon-label-button-style-name: "ToolBarIconButton";
 }
 
 MToolbarStyle.Landscape {
