Fixes: NB#211465 - Datetime applet uses some other than MLocationDatabase as timezone list source
RevBy: Ilya Dogolazky, John Tapsell

Details:

libicu’s canonicalization of time zone ids is weird, it considers
“Europe/Zagreb” an alias for the canonical id “Europe/Belgrade”.

Updating to libicu46 would not help.

Use Ilya’s /usr/share/tzdata-timed/zone.alias from the tzdata-timed
package instead. I added a built in fallback with the current data of
zone.alias in case the real file is missing.

For availability of the “tzdata-timed” package, see also
https://bugs.meego.com/show_bug.cgi?id=12919

--- a/src/corelib/i18n/i18n.qrc
+++ b/src/corelib/i18n/i18n.qrc
@@ -2,5 +2,6 @@
  <qresource>
      <file>libmeegotouch_rtl.qm</file>
      <file>libmeegotouch_ltr.qm</file>
+     <file>zone.alias.fallback</file>
  </qresource>
 </RCC>
