Changes: Added missing tool and tab bar variants to Widgetsgallery
RevBy: Holger Schröder

--- a/demos/widgetsgallery/theme/base/style/widgetsgallery.css
+++ b/demos/widgetsgallery/theme/base/style/widgetsgallery.css
@@ -130,3 +130,18 @@ MButtonStyle#ExpandingBackgroundButton {
     margin-bottom: 2.5mm;
     transition: "expanding-background";
 }
+
+MApplicationWindowStyle#IconAndLabelTabsTop.Portrait {
+    floatable-tab-bar: true;
+    tab-bar-style-name: "TabsTopWithIconAndLabel";
+}
+
+MApplicationWindowStyle#IconAndLabelTabsBottom.Portrait {
+    floatable-tab-bar: true;
+    tab-bar-style-name: "TabsBottomWithIconAndLabel";
+}
+
+MApplicationWindowStyle#IconOrLabelTabsTop {
+    floatable-tab-bar: true;
+    tab-bar-style-name: "TabsTopWithIconOrLabel";
+}
